# Stegozavr

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  conanfile.txt
configs/: README.md  dynamic_config.json  static_config.yaml
docs/api/: v1.md
include/: README.md
include/stegozavr/api/: handlers.hpp
include/stegozavr/api/v1/: decode.hpp  encode.hpp  register.hpp
include/stegozavr/api/v1/handlers/: decode.hpp  encode.hpp  get_token.hpp  queries.hpp  register_user.hpp
include/stegozavr/engine/: engine.hpp
include/stegozavr/engine/decode/: decode.hpp
include/stegozavr/engine/encode/: encode.hpp
include/stegozavr/engine/utils/: files.hpp
release/: CMakeCache.txt  CTestTestfile.cmake  FindGTest.cmake  Makefile  cmake_install.cmake  compile_commands.json  conanbuildinfo.txt  conaninfo.txt
release/cmake_generated/: FindBrotli.cmake  FindCrypto.cmake  FindCryptoPP.cmake  FindGit.cmake  FindGrpc.cmake  FindGrpcChannelz.cmake  FindGssApi.cmake  FindHelperCurlYandex.cmake  FindHelperbson-1.0.cmake  FindHelpermongoc-1.0.cmake  FindHiredis.cmake  FindHttp_Parser.cmake  FindJemalloc.cmake  FindLibEv.cmake  FindNghttp2.cmake  FindPostgreSQL.cmake  FindPostgreSQLInternal.cmake  FindProtobuf.cmake  FindPythonDev.cmake  FindSSL.cmake  FindUserverGBench.cmake  FindUserverGTest.cmake  FindUserverGrpc.cmake  FindUserverProtobuf.cmake  Findbson.cmake  Findc-ares.cmake  Findcctz.cmake  Findclickhouse-cpp.cmake  Findfilesystem.cmake  Findfmt.cmake  Findgraph.cmake  Findgregorian.cmake  Findiostreams.cmake  Findlibintl.cmake  Findlibyamlcpp.cmake  Findlocale.cmake  Findmongoc.cmake  Findprogram_options.cmake  Findregex.cmake  Findspdlog.cmake  (+2 more)
release/userver/core/: CTestTestfile.cmake  Makefile  build_config.hpp  cmake_install.cmake
release/userver/universal/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sql/: schema.sql
src/: README.md  main.cpp
src/api/: handler.cpp
src/stegozavr/api/: handler.cpp
src/stegozavr/api/v1/: decode.cpp  encode.cpp  register.cpp
src/stegozavr/api/v1/handlers/: decode.cpp  encode.cpp  get_token.cpp  register_user.cpp
src/stegozavr/api/v1/handlers/impl/: db_utils.cpp  db_utils.hpp
src/stegozavr/engine/decode/: decode.cpp
src/stegozavr/engine/encode/: encode.cpp
src/stegozavr/engine/utils/: files.cpp
tests/: CMakeLists.txt  engine_tests.cpp
tests/unit/: CMakeLists.txt  engine_tests.cpp
